# spawn

./: README.rst  meson.build  meson_options.txt
.github/workflows/: build.yml
config/: accounting.lua
debian/: .gitignore  changelog  cm4all-slice.install  cm4all-spawn-accessory.install  cm4all-spawn-accessory.service  cm4all-spawn-accessory.socket  cm4all-spawn-netns.dirs  cm4all-spawn-netns@.service  cm4all-spawn-reaper.install  cm4all-spawn-reaper.service  cm4all-spawn-reaper.sysusers  cm4all-spawn.install  cm4all-spawn.service  cm4all.slice  control  libnss-cm4all-logname.install  not-installed  rules
doc/: conf.py  index.rst
src/: Agent.cxx  Agent.hxx  Builder.hxx  CgroupAccounting.cxx  CgroupAccounting.hxx  Client.cxx  Connection.cxx  Connection.hxx  Instance.cxx  Instance.hxx  LAccounting.cxx  LAccounting.hxx  LInit.cxx  LInit.hxx  Listener.hxx  Main.cxx  Namespace.cxx  Namespace.hxx  NamespaceMap.hxx  NssLogname.cxx  ReaperInstance.cxx  ReaperInstance.hxx  ReaperMain.cxx  Released.cxx  Request.cxx  Request.hxx  Scopes.cxx  Scopes.hxx  TreeWatch.cxx  TreeWatch.hxx  UnifiedWatch.cxx  UnifiedWatch.hxx
src/accessory/: Connection.cxx  Connection.hxx  Instance.cxx  Instance.hxx  Listener.hxx  Main.cxx  Namespace.cxx  Namespace.hxx  NamespaceMap.cxx  NamespaceMap.hxx  Request.cxx  Request.hxx
src/reaper/: CgroupAccounting.cxx  CgroupAccounting.hxx  Instance.cxx  Instance.hxx  LAccounting.cxx  LAccounting.hxx  LInit.cxx  LInit.hxx  LResolver.cxx  LResolver.hxx  Main.cxx  Released.cxx  Scopes.cxx  Scopes.hxx  TreeWatch.cxx  TreeWatch.hxx  UnifiedWatch.cxx  UnifiedWatch.hxx
src/system/: SetupProcess.cxx
test/: RunTreeWatch.cxx  meson.build
