option('documentation', type: 'feature',
  description: 'Build documentation')

option('cap', type: 'feature', description: 'Linux capability support (using libcap)')
option('seccomp', type: 'feature', description: 'seccomp support (using libseccomp)')
option('sodium', type: 'feature', description: 'libsodium support')
option('systemd', type: 'feature', description: 'systemd support (using libsystemd)')
option('pg', type: 'feature', description: 'PostgreSQL client for Lua')
